--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,8 +1,11 @@
 :root {
   // Application colors
   --color-background: #ffffff;
-  --color-secondary: #f3f6f6;
-  --color-font: #355C7D;
+  --color-tan: #d0a578;
+  --color-light-tan: #e0d5cb;
+  --color-blue: #355C7D;
+  --color-green: #40564f;
+  --color-font: #363636;
   --color-black: #000;
   --color-white: #FFFFFF;
 
