--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,34 +8,37 @@
   <div class="header-block">
     <%= image_tag 'birds.jpg'%>
     <div class="inner-text">
-      <h1>Facilitating knowing your true self</h1>
-      <p>to harmonize and heal how you relate to yourself, others, God and the world.</p>
+      <h1>Facilitating knowing your true self.</h1>
+      <p>Harmonize and heal how you relate to yourself, others, God and the world.</p>
     </div>
   </div>
 
-  <div class="block-1">
+  <div class="provide block">
     <h2>What I provide:</h2>
-    <ul>
-      <li>Spiritual Direction - 1 hour sessions typically 1-2/month</li>
-      <li>Enneagram Typing Interviews - 1 hour session</li>
-      <li>Enneagram 1 on 1 coaching - 1 hour sessions typically 1-2/month</li>
-      <li>Core Gift Discovery Interviews - 2 hour sessions</li>
-    </ul>
+    <p>Spiritual Direction - 1 hour sessions typically 1-2/month</p>
+    <p>Enneagram Typing Interviews - 1 hour session</p>
+    <p>Enneagram 1 on 1 coaching - 1 hour sessions typically 1-2/month</p>
+    <p>Core Gift Discovery Interviews - 2 hour sessions</p>
   </div>
 
-  <div class="block-2">
+  <div class="spiritual-direction-block block">
     <h2>What is Spiritual Direction?</h2>
     <p>Spiritual Direction is a place for thoughtful reflection to give our full attention to noticing the movements of God in our daily lives and cultivate more awareness around them.</p>
   </div>
 
-  <div class="block-3">
-    <h2>What is a Core Gift Discovery Interview?</h2>
-    <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are.</h3>
-    <h3>Grant Lord, that I may know myself that I may know Thee."</h3>
-    <h4>— Augustine</h4>
+  <div class="core-gift-block block">
+    <div class="left-col">
+      <%= link_to image_tag('core-gift.png'), 'https://www.coregift.org/home' %>
+    </div>
+    <div class="right-col">
+      <h2>What is a Core Gift Discovery Interview?</h2>
+      <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are.</h3>
+      <h3>Grant Lord, that I may know myself that I may know Thee."</h3>
+      <h4>— Augustine</h4>
+    </div>
   </div>
 
-  <div class="block-4">
+  <div class="background-block block">
     <h2>Background and Training:</h2>
     <p>I have a certificate in Spiritual Direction from Fall Creek Abbey School of Spiritual Direction in Indianapolis, IN and have been offering Spiritual Direction for the last 2 years. I was introduced to Spiritual Direction while I was completing my Enneagram Practitioner Certification in 2015. I felt drawn to the marriage of using a tool like the Enneagram to facilitate self-knowledge and greater awareness of the Divine, within and without. I am currently working on a 200 hour Yoga Teacher Training to further integrate deepening spiritual practices with the body and mind. Before that, I nurtured my 6 children and participated in their education full time for 25 years. Before that I worked with my Exercise Science degree in different capacities as a trainer and exercise therapist. I have always been involved in cultivating growth and transformation for myself and others through learning, teaching, volunteering, mentoring and parenting for the last 35 years. It has been my joy and passion to walk beside people on their journey.</p>
   </div>
