--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,14 +1,13 @@
 .home-page {
+  margin-top: -100px;
+  img {
+    width: 100%;
+  }
 
   .header-block {
     position: relative;
     display: flex;
     align-items: flex-end;
-
-    img {
-      width: 100%;
-      height: 50vh;
-    }
 
     .inner-text {
       width: 25%;
@@ -21,15 +20,38 @@
     }
   }
 
-
-  .block-1, .block-3 {
-    margin: 30px 50px;
-    padding: 40px;
+  .block {
+    padding: 80px;
   }
 
-  .block-2, .block-4 {
-    margin: 30px 50px;
-    background-color: var(--color-secondary);
-    padding: 40px;
+  .provide {
+    text-align: center;
+  }
+
+  .spiritual-direction-block {
+    text-align: center;
+    color: var(--color-white);
+    background-color: var(--color-green);
+  }
+
+  .core-gift-block {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+
+    .right-col-1 {
+      padding-left: 20px;
+    }
+  }
+
+  .background-block {
+    background-color: var(--color-light-tan);
+
+    h2 {
+      text-align: center;
+    }
+
+    p {
+      padding: 0 40px;
+    }
   }
 }
