--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,6 @@
 <div class="home-page">
 
   <div class="header-block">
-    <%= image_tag 'birds.jpg'%>
     <div class="inner-text">
       <h1>Facilitating knowing your true self.</h1>
       <p>Harmonize and heal how you relate to yourself, others, God and the world.</p>
@@ -15,15 +14,18 @@
 
   <div class="provide block">
     <h2>What I provide:</h2>
-    <p>Spiritual Direction - 1 hour sessions typically 1-2/month</p>
-    <p>Enneagram Typing Interviews - 1 hour session</p>
-    <p>Enneagram 1 on 1 coaching - 1 hour sessions typically 1-2/month</p>
-    <p>Core Gift Discovery Interviews - 2 hour sessions</p>
+    <p><strong>Spiritual Direction</strong> - 1 hour sessions typically 1-2/month</p>
+    <p><strong>Enneagram Typing Interviews</strong> - 1 hour session</p>
+    <p><strong>Enneagram 1 on 1 coaching</strong> - 1 hour sessions typically 1-2/month</p>
+    <p><strong>Core Gift Discovery Interviews</strong> - 2 hour sessions</p>
   </div>
 
   <div class="spiritual-direction-block block">
     <h2>What is Spiritual Direction?</h2>
     <p>Spiritual Direction is a place for thoughtful reflection to give our full attention to noticing the movements of God in our daily lives and cultivate more awareness around them.</p>
+    <br/>
+    <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are. Grant Lord, that I may know myself that I may know Thee."</h3>
+    <h4>— Augustine</h4>
   </div>
 
   <div class="core-gift-block block">
@@ -32,14 +34,12 @@
     </div>
     <div class="right-col">
       <h2>What is a Core Gift Discovery Interview?</h2>
-      <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are.</h3>
-      <h3>Grant Lord, that I may know myself that I may know Thee."</h3>
-      <h4>— Augustine</h4>
+      <p>Your Core Gift is the unique offering you have to share with others. It is connected to and strengthened by your life experiences—particularly your challenges. Knowing your Core Gift means you can better share it with others, provides focus to your sense of purpose and well-being, and guides your decision- making on the path forward. The interview takes about 90 minutes. The main part of the interview involves being asked questions that have no “right” answer. Your opinion is all that matters. After you answer the questions, you are guided through several more steps until you have identified your Core Gift. Your Core Gift statement is created out of your own words. It’s a powerful reflection of how you, uniquely, show up in the world and what matters most deeply to you.</p>
     </div>
   </div>
 
   <div class="background-block block">
-    <h2>Background and Training:</h2>
+    <h2>Background and Training</h2>
     <p>I have a certificate in Spiritual Direction from Fall Creek Abbey School of Spiritual Direction in Indianapolis, IN and have been offering Spiritual Direction for the last 2 years. I was introduced to Spiritual Direction while I was completing my Enneagram Practitioner Certification in 2015. I felt drawn to the marriage of using a tool like the Enneagram to facilitate self-knowledge and greater awareness of the Divine, within and without. I am currently working on a 200 hour Yoga Teacher Training to further integrate deepening spiritual practices with the body and mind. Before that, I nurtured my 6 children and participated in their education full time for 25 years. Before that I worked with my Exercise Science degree in different capacities as a trainer and exercise therapist. I have always been involved in cultivating growth and transformation for myself and others through learning, teaching, volunteering, mentoring and parenting for the last 35 years. It has been my joy and passion to walk beside people on their journey.</p>
   </div>
 </div>
