--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,16 +1,20 @@
 .home-page {
-  margin-top: -100px;
+  margin-top: -120px;
+
   img {
     width: 100%;
   }
 
   .header-block {
+    background: url(birds.jpg) no-repeat 50% 0;
+    background-size: auto 100%;
     position: relative;
     display: flex;
     align-items: flex-end;
+    height: 100vh;
 
     .inner-text {
-      width: 25%;
+      width: 50%;
       position: absolute;
       bottom: 0;
       left: 0;
@@ -30,21 +34,27 @@
 
   .spiritual-direction-block {
     text-align: center;
-    color: var(--color-white);
-    background-color: var(--color-green);
+    background-color: var(--color-light-tan);
   }
 
   .core-gift-block {
     display: grid;
     grid-template-columns: 1fr 3fr;
 
-    .right-col-1 {
+    .left-col {
+      img {
+        margin-top: 20px;
+      }
+    }
+
+    .right-col {
       padding-left: 20px;
     }
   }
 
   .background-block {
-    background-color: var(--color-light-tan);
+    color: var(--color-white);
+    background-color: var(--color-green);
 
     h2 {
       text-align: center;
@@ -52,6 +62,44 @@
 
     p {
       padding: 0 40px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .home-page {
+    margin-top: -100px;
+
+    .header-block {
+      .inner-text {
+        padding: 30px;
+        width: 75%;
+      }
+    }
+
+    .block {
+      padding: 30px;
+    }
+
+    .core-gift-block {
+      grid-template-columns: 1fr;
+
+      .left-col {
+        img {
+          margin-top: 0;
+        }
+      }
+
+      .right-col {
+        width: 100%;
+        padding-left: 0;
+      }
+    }
+
+    .background-block {
+      p {
+        padding: 0;
+      }
     }
   }
 }
