--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
       <h1>Facilitating knowing your true self.</h1>
       <p>Harmonize and heal how you relate to yourself, others, God and the world.</p>
     </div>
+    <i class="fa-solid fa-arrow-down fa-3x down-arrow"></i>
   </div>
 
   <div class="provide block">
