--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -22,6 +22,13 @@
       padding: 50px;
       color: var(--color-white);
     }
+
+    .down-arrow {
+      position: absolute;
+      bottom: 30px;
+      right: 5%;
+      color: var(--color-white);
+    }
   }
 
   .block {
