--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,6 @@
       <h1>Facilitating knowing your true self.</h1>
       <p>Harmonize and heal how you relate to yourself, others, God and the world.</p>
     </div>
-    <i class="fa-solid fa-arrow-down fa-3x down-arrow"></i>
   </div>
 
   <div class="provide block">
@@ -27,6 +26,11 @@
     <br/>
     <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are. Grant Lord, that I may know myself that I may know Thee."</h3>
     <h4>— Augustine</h4>
+  </div>
+
+  <div class="enneagram-block block">
+    <h2>What is the Enneagram?</h2>
+    <p>The Enneagram is an ancient map of our internal operating system. It’s a tool and a resource to show us 9 different ways of showing up in the world and which one I default to. If I don’t know who I am, I can’t get out of my own way. It shows me where to look when I am stuck and how to shift by encouraging self-observation and presence and gives us insight about others so that we can engage in our relationships with more grace and love.</p>
   </div>
 
   <div class="core-gift-block block">
