--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -3,5 +3,5 @@
 </head>
 <div class="contact-page">
   <h1>Schedule a Consultation</h1>
-  <p>You can email me at ...</p>
+  <%= render 'form' %>
 </div>
