--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   </head>
 
   <body>
+    <% flash.each do |key, message| %>
+      <div class="flash_<%= key %>">
+        <%= message %>
+      </div>
+    <% end %>
+
     <header>
       <%= link_to 'Denyse Hadley Spiritual Direction and Coaching', root_path, class: "home-link #{'white' if current_page?(root_path)}" %>
       <%= link_to 'Contact', contact_index_path, class: 'contact-link' %>
