update quotes and email message

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,7 +32,7 @@
     text-align: center;
   }
 
-  .spiritual-direction-block {
+  .tan-block {
     text-align: center;
     background-color: var(--color-light-tan);
   }
