--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,17 +20,21 @@
     <p><strong>Core Gift Discovery Interviews</strong> - 2 hour sessions</p>
   </div>
 
-  <div class="spiritual-direction-block block">
+  <div class="tan-block block">
     <h2>What is Spiritual Direction?</h2>
     <p>Spiritual Direction is a place for thoughtful reflection to give our full attention to noticing the movements of God in our daily lives and cultivate more awareness around them.</p>
     <br/>
-    <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are. Grant Lord, that I may know myself that I may know Thee."</h3>
-    <h4>— Augustine</h4>
+    <h3>"Whatever the spiritual or faith path, the Divine seeks you where you are."</h3>
   </div>
 
   <div class="enneagram-block block">
     <h2>What is the Enneagram?</h2>
     <p>The Enneagram is an ancient map of our internal operating system. It’s a tool and a resource to show us 9 different ways of showing up in the world and which one I default to. If I don’t know who I am, I can’t get out of my own way. It shows me where to look when I am stuck and how to shift by encouraging self-observation and presence and gives us insight about others so that we can engage in our relationships with more grace and love.</p>
+  </div>
+
+  <div class="tan-block block">
+    <h3>"Grant Lord, that I may know myself that I may know Thee."</h3>
+    <h4>— Augustine</h4>
   </div>
 
   <div class="core-gift-block block">
