update contact from and main page wording

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="header-block">
     <div class="inner-text">
-      <h1>Facilitating knowing your true self.</h1>
+      <h1>Remember your True Self.</h1>
       <p>Harmonize and heal how you relate to yourself, others, God and the world.</p>
     </div>
   </div>
