--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -13,6 +13,7 @@
       label {
         display: block;
         margin-bottom: 5px;
+        text-align: left;
       }
 
       .form-control {
@@ -22,6 +23,10 @@
         font-size: var(--font-size-sm);
         border: 1px solid #ccc;
         border-radius: 4px;
+      }
+
+      textarea {
+        min-height: 60px;
       }
 
       textarea.form-control {
